making progress, need to fix width and alignment

--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -5,7 +5,7 @@ footer {
   padding-bottom: $space-md;
   border-top: 4px solid $color-blue-dark;
   height: $height-footer;
-  position: absolute;
+  // position: absolute;
   bottom: 0;
   width: 100%;
 
