--- a/plugins/feedback/scss/inline-feedback.scss
+++ b/plugins/feedback/scss/inline-feedback.scss
@@ -1,32 +1,32 @@
 .inline-feedback {
-    bottom: $height-footer;
-    max-height: 40px;  
+    // bottom: $height-footer;
+    // max-height: 40px;  
     transition: max-height 0.3s ease-out;
 
     .inline-feedback-prompt {
-      padding: $space-xxs $space-md;
-      height: $height-inline-feedback-prompt;
+      // padding: $space-xxs $space-md;
+      // height: $height-inline-feedback-prompt;
       // background-color: $color-blue-light;
-      font-size: 0.8em;
+      // font-size: 0.8em;
 
       a {
         color: $color-white;
       }
     }
 
-    form {
-      display: none;
-    }
+    // form {
+    //   display: none;
+    // }
 
     &.expanded {
-      max-height: 400px;
+      // max-height: 400px;
       border-top: 5px solid $color-blue-light;
       
       .inline-feedback-prompt {
         display: none;
       }
 
-      form {
+      .inner-div {
         display: block;
 
         .close {
